[gd_scene load_steps=9 format=2]

[ext_resource path="res://RESOURCES/GuiImages/DivisionLine.png" type="Texture" id=1]
[ext_resource path="res://RESOURCES/GuiImages/ParchmentSmall.png" type="Texture" id=2]
[ext_resource path="res://UI/FullScreenPopup/SlottableInspector/SlottableInspector.tscn" type="PackedScene" id=3]
[ext_resource path="res://RESOURCES/Font/BMYEONSUNG.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/FullScreenPopup/SlottableInspector/TraitInspector/TraitInspector.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 85
font_data = ExtResource( 4 )

[node name="TraitInspector" instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="Active" type="Label" parent="Panel/VBoxContainer" index="5"]
margin_top = 570.0
margin_right = 840.0
margin_bottom = 690.0
rect_min_size = Vector2( 0, 120 )
custom_fonts/font = SubResource( 1 )
text = "( ACTIVE )"
align = 1
valign = 1
autowrap = true

[node name="ActiveLine" type="HBoxContainer" parent="Panel/VBoxContainer" index="6"]
margin_top = 694.0
margin_right = 840.0
margin_bottom = 714.0
rect_min_size = Vector2( 0, 20 )

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/ActiveLine" index="0"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/ActiveLine" index="1"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/ActiveLine" index="2"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Description" type="Label" parent="Panel/VBoxContainer" index="7"]
margin_top = 718.0
margin_right = 840.0
margin_bottom = 1236.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Gain 500 Precision."
align = 1
valign = 1
autowrap = true

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer" index="8"]
margin_top = 1240.0
margin_right = 840.0
margin_bottom = 1460.0
rect_min_size = Vector2( 0, 220 )

[node name="Allocate" type="TextureButton" parent="Panel/VBoxContainer/Buttons" index="0"]
margin_right = 840.0
margin_bottom = 220.0
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/Buttons/Allocate" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Allocate"
align = 1
valign = 1

[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Allocate" to="." method="_on_Allocate_pressed"]
